# bullistic-campaign-treasury-manager

./: README.md  package.json
programs/campaign-treasury-manager/: Cargo.toml
programs/campaign-treasury-manager/src/: constants.rs  lib.rs
programs/campaign-treasury-manager/src/instructions/: create_deposit.rs  create_escrow.rs
programs/campaign-treasury-manager/src/state/: campaign_escrow.rs
programs/campaign-treasury-manager/src/utils/: validate_cpi_invocation.rs
src/scripts/: lintProgramIdl.ts  modifyProgramIdl.ts
src/scripts/utils/: parseScriptArgs.ts
src/sdk/: CampaignTreasuryManagerSdk.ts
src/sdk/constants/: ProgramIds.ts
src/sdk/instructions/: createDepositIx.ts  createEscrowIx.ts  updateEscrowIx.ts
src/sdk/pdas/: findCampaignEscrowPda.ts  findDepositEscrowPda.ts  findDepositRecordPda.ts  findTreasuryEscrowPda.ts
src/sdk/types/: CampaignEscrowAccount.ts  DecodedCampaignTreasuryManagerTransactionResult.ts  UpdateCampaignEscrowInput.ts
src/sdk/utils/: decodeCampaignTreasuryManagerTransaction.ts  getCurrentActivePayoutPhase.ts  getErrorMessageFromCampaignTreasuryManagerIdl.ts  getProgramIdsFromEnvironment.ts
src/tests/e2e/: createEscrow.test.ts  depositFunds.test.ts  treasuryEscrow.test.ts  updateEscrow.test.ts
src/tests/types/: CampaignEscrowSetupOptions.ts
src/tests/utils/: createCampaignEscrowForTest.ts  createDepositForTest.ts  createDepositsForTest.ts  createEsrowIxForTest.ts  expectTransactionToFailWithErrorCode.ts  getCampaignEscrowInputForTest.ts  getConnectionAndSdkForTest.ts  getRpcFromEnvironmentForTest.ts  (+4 more)
(+3 files in other folders)
